--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}
+    ${libs.PrimeFaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
