--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.PrimeFaces.classpath}
+    ${libs.PrimeFaces.classpath}:\
+    ${libs.PdfBox.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
